# Dynamo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: Build.yml  cmake.yml
apps/: CMakeLists.txt
apps/application/: CMakeLists.txt
apps/application/include/application/: application.h
apps/application/src/: application.cpp
apps/benchmarks/: CMakeLists.txt  benchmark.cpp
apps/examples/: CMakeLists.txt
apps/examples/include/examples/: Example.hpp
apps/jfsma/: CMakeLists.txt  jfsma.cpp
apps/orch/: CMakeLists.txt  client.cpp  orch.cpp  server.cpp
apps/orch/cmake/: gRPC.cmake
apps/orch/proto/: address.proto  addressbook.proto  orch.proto
apps/sandbox-console/: CMakeLists.txt  main.cpp
apps/sandbox-gui/: CMakeLists.txt  main.cpp
apps/sandbox-gui/app/: App.cpp  App.hpp
apps/tests/: CMakeLists.txt  simulation.cpp
apps/victeams/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp
docs/: Doxyfile.in
dynamo/: CMakeLists.txt
dynamo-gui/: CMakeLists.txt
dynamo-gui/include/dynamo-gui/: dynamo-gui.hpp
dynamo-gui/include/dynamo/gui/: core.hpp  debug.hpp  dynamo_inspector.hpp  flecs_inspector.hpp
dynamo-gui/include/dynamo/gui/widgets/: brain_viewer.hpp  component_widgets.hpp  entity_widgets.hpp  graph.hpp  influence_graph_viewer.hpp  plot.hpp
dynamo-gui/src/: brain_viewer.cpp  component_widgets.cpp  debug.cpp  dynamo-gui.cpp  dynamo_inspector.cpp  entity_widgets.cpp  flecs_inspector.cpp  graph.cpp
dynamo/include/dynamo/: dynamo.hpp  simulation.hpp  types.hpp
dynamo/include/dynamo/algorithm/: influence_graph.hpp
dynamo/include/dynamo/internal/: archetype.hpp  components.hpp  core.hpp  flow.hpp  process.hpp  relations.hpp  types.hpp
dynamo/include/dynamo/modules/: activity_dl.hpp  basic_action.hpp  basic_perception.hpp  basic_stress.hpp  core.hpp  perception.hpp
dynamo/include/dynamo/strategies/: all.hpp  basic.hpp  influence_graph.hpp
dynamo/include/dynamo/utils/: containers.hpp  ring_buffer.hpp  type_map.hpp
dynamo/src/: Simulation.cpp  core.cpp  dynamo.cpp  flow.cpp  process.cpp  simulation.cpp  types.cpp
imgui-addons/: CMakeLists.txt
imgui-addons/include/imgui-addons/: graph.hpp  imgui-addons.hpp  nodes_editor.hpp
imgui-addons/src/: graph.cpp  imgui-addons.cpp  nodes_editor.cpp
include/dynamo/: dynamo.hpp
persona/: CMakeLists.txt  persona.cpp  persona.hpp
src/: CMakeLists.txt  dynamo.cpp
tests/: CMakeLists.txt  simulation.cpp
